clicks captcha and informs

--- a/popup.html
+++ b/popup.html
@@ -11,7 +11,7 @@
     <h2>What this clicker can do?</h2>
     <p>
       This clicker extension can click the 'I am not ROBOT' captcha button that appears after every 50 session races on
-      nitrotype.
+      nitrotype. It will also inform the nitro typer bot about the action, so that bot could proceed for next race.
     </p>
   </article>
 </body>
